styles/maincss.css
.banner {
  background-image: url("../images/banner.jpg");
  background-position: center; /* Center the image */
  background-repeat: no-repeat; /* Do not repeat the image */
  background-size: cover; /* Resize the background image to cover the entire container */
  min-height: 438px;
  background-color: #031432;
}

.banner > .flex-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
  align-content: flex-start;
}

.banner > .flex-container > .tiempos {
  color: white;
  font-family: RobotoRegular;
  font-size: 12px;
  text-align: center;
  line-height: 24px;
  text-transform: uppercase;
}

.banner > .flex-container > .tiempos > p {
  margin: 0;
  text-shadow: 1px 1px 2px #117396, 0 0 1em #ffffff, 0 0 0.2em #117396;
}

.section1 {
  background-image: url("../images/section1.jpg");
  background-position: 0% 100%;
  background-repeat: no-repeat; /* Do not repeat the image */
  background-size: auto; /* Resize the background image to cover the entire container */
  /*min-height: 450px;*/
  background-color: #013861;
}

.section-1-paragraph {
  font-size: 13px;
  font-family: Robotoregular;
  font-weight: normal;
  padding-bottom: 10px;
}

@media only screen and (min-width: 768px) {
  .section-1-paragraph {
    padding-right: 35px;
    margin-top: 4rem;
  }
}

.section2 {
  background-image: url("../images/section2.jpg");
  background-position: 50% 0%; /* Center the image */
  background-repeat: no-repeat; /* Do not repeat the image */
  background-size: cover; /* Resize the background image to cover the entire container */
  min-height: 630px;
  background-color: #141414;
}

.section2 > .tomo {
  padding-top: 415px;
}

.section2 > .tomo > h2.tomorrow {
  font-family: "Roboto";
  font-size: 48px;
  color: white;
  text-align: center;
  margin-bottom: 0;
}

@media only screen and (max-width: 600px) {
  .section2 > .tomo > h2.tomorrow {
    font-size: 2rem;
  }
}

.section2 > .tomo > h2.after {
  font-family: "titlingstand";
  font-size: 48px;
  color: #76bbf4;
  text-align: center;
  /* margin-left: 50px; */
}

.section2 > .tomo > h2.after::after {
  content: "";
  content: url("../images/aftermovie.png");
  padding: 0px 0px 0px 10px;

  display: inline-block;
  transform: translate(0px, 6px);
  /* width: 10px; 
    height: 128px;
    transform: scale(.8); */
}

.section2 > .tomo > ul.vive {
  font-family: titlinglight;
  font-size: 36px;
  color: white;
  list-style-type: none;
  padding: 0;
  margin-bottom: 0;
  text-align: center;
}

.section2 > .tomo > ul.vive > li {
  display: inline-block;
}

.section2 > .tomo > ul.vive > li::after {
  content: "";
  content: url("../images/vertical-line.png");
  padding: 0px 0px 0px 4px;
  display: inline-block;
  transform: translate(0px, 6px);
}
.section2 > .tomo > ul.vive > :last-child::after {
  content: "";
  padding: 0;
}

.section3 {
  background-position: center; /* Center the image */
  background-repeat: no-repeat; /* Do not repeat the image */
  background-size: cover; /* Resize the background image to cover the entire container */
  min-height: 570px;
  background-color: #141414;
}

.section3 > .row > .col-md-6 {
  min-height: 300px;
  max-height: 300px;
}

.section3 > .row > .alpha-col {
  background-image: url("../images/lareunion.jpg");
  background-position: 50% 50%;
  background-repeat: no-repeat; /* Do not repeat the image */
  border-right: 1px solid #242424;
  border-bottom: 1px solid #242424;
}

.section3 > .row > .beta-col {
  background-image: url("../images/dreamville.jpg");
  background-position: 50% 50%;
  background-repeat: no-repeat; /* Do not repeat the image */
  border-bottom: 1px solid #242424;
}

.section3 > .row > .gamma-col {
  background-image: url("../images/instalaciones.jpg");
  background-position: 50% 50%;
  background-repeat: no-repeat; /* Do not repeat the image */
  border-right: 1px solid #242424;
}

.section3 > .row > .col-md-6 > h3 {
  font-family: titlinglight;
  font-size: 48px;
  color: #ffffff;
  text-align: center;
  padding: 110px 0 0 0px;
}

.section3 > .row > .col-md-6 > h3::before {
  content: "";
  content: url("../images/horizontal-stroke.png");
  display: inline-block;
  position: absolute;
  transform: translate(0px, 10px);
}

.section3 > .row > .delta-col > h3 {
  text-align: left;
  padding: 0;
}

.section3 > .row > .col-md-6 > button{
  /* transform: translate(389px, 53px); */
  position: absolute;
  right: 150px;
  bottom: 20px;
}

.section4 {
  /*background-image: url("../images/section4.jpg");*/
  background-color: #141414;
  background-position: center; /* Center the image */
  background-repeat: no-repeat; /* Do not repeat the image */
  background-size: cover; /* Resize the background image to cover the entire container */
  min-height: 218px;
  background-color: #141414;
}

h2.helper {
  margin: 0;
  color: red;
  position: absolute;
  font-size: 12px;
}

p {
  color: white;
}

p.sky-stroke::before {
  content: url("../images/sky-stroke.png");
}

button {
  /* margin-bottom: 20px;
  margin-right: 20px; */
  background-color: #76bbf4;
  border: none;
  font-family: Roboto;
  font-size: 12px;
  color: white;
  padding: 8px 5px 5px 10px;
  text-transform: uppercase;
}

button::after {
  content: url("../images/chevron.png");
  padding-left: 14px;
  padding-right: 2px;
}

